fix spacing on pages

--- a/demoVite/src/css/menu.css
+++ b/demoVite/src/css/menu.css
@@ -35,6 +35,10 @@ div.order {
 .menu-option-count {
 
 }
+#make-order-button-container {
+    display: flex;
+    justify-content: center;
+}
 #make-order {
     padding: 10px;
 }
